# burn-examples

./: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml
examples/get_started/: README.md  main.rs
examples/yolov3_burn/: Cargo.toml  FIXES.md  README.md  main.rs  model.rs  tests.rs  utils.rs
examples/yolov5_burn/: README.md  main.rs  model.rs  tests.rs  utils.rs
src/: main.rs
src/utils/: greeting.rs
tests/: integration_tests.rs
