[package]
edition = "2024"
name = "burn-examples"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = {version = "0.17.0", features = ["wgpu", "autodiff"]}
serde = {version = "1.0", features = ["derive"]}

[package.metadata.license.allow]
"Zlib" = ["*"]
